# floz-templates

./: .gitignore  README.md
api/: .env.example  Cargo.toml  README.md
api/src/: lib.rs  main.rs
api/src/app/: mod.rs
api/src/app/note/: mod.rs  model.rs  routes.rs
api/src/middleware/: mod.rs
api/src/seed/: mod.rs
minimal/: .env.example  Cargo.toml  test_ntex.rs
minimal/src/: lib.rs  main.rs
minimal/src/seed/: mod.rs
saas/: .env.example  Cargo.test.toml  Cargo.toml  test_ntex.rs  test_utoipa.rs
saas/src/: lib.rs  main.rs
saas/src/app/: mod.rs  tasks.rs  ws.rs
saas/src/app/org/: model.rs  routes.rs
saas/src/app/org/migrations/: v0.json
saas/src/app/role/: mod.rs  model.rs
saas/src/app/role/migrations/: v0.json
saas/src/app/user/: model.rs  routes.rs
saas/src/app/user/migrations/: v0.json  v1.json
saas/src/app/user_role/: mod.rs  model.rs
saas/src/app/user_role/migrations/: v0.json
saas/src/middleware/: auth.rs  tenant.rs
saas/src/seed/: initial_demo.rs  mod.rs
saas/tests/: integration.rs
