[package]
name = "starter-api"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["sqlite", "openapi"]
openapi = ["floz/openapi"]
postgres = ["floz/postgres", "sqlx/postgres"]
sqlite = ["floz/sqlite", "sqlx/sqlite"]


[dependencies]
floz = { version = "0.1.3", features = ["default"] }
tokio = { version = "1", features = ["full", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio"] }
ntex = "3.7.1"
utoipa = "5.4.0"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
