[package]
name = "starter-minimal"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
floz = { version = "0.1.0", features = ["default"] }
tokio = { version = "1", features = ["full", "macros"] }
ntex = "3.7.1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
