[package]
name = "starter-saas"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
floz = { path = "../../floz", features = ["full"] }
tokio = { workspace = true, features = ["full", "macros"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
ntex = { workspace = true }
utoipa = { workspace = true }
tracing = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
