[package]
name = "starter-saas"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
floz = { version = "0.1.0", features = ["full"] }
tokio = { version = "1", features = ["full", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
ntex = "2.17"
utoipa = "5.4.0"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
